Blackpurl/src/objects/General_Configurations__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configurations used in Blackpurl app</description>
    <fields>
        <fullName>ARI_Partsmart__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ARI Partsmart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Tax_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It will display &quot;Tax Invoice&quot; if it&apos;s value is true on all Invoice documents.</description>
        <inlineHelpText>It will display &quot;Tax Invoice&quot; if it&apos;s value is true on all Invoice documents.</inlineHelpText>
        <label>Display Tax Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_QB_Accounting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable QB Accounting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>H_D_Dealer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This new configuration will control the visibility of all new functionality related to Fusion Reporting.</description>
        <inlineHelpText>It controls the visibility of all functionality related to Fusion Reporting. 

WARNING - QB should be enabled before enabling this.</inlineHelpText>
        <label>H-D Dealer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Search_Grid_Page_Size__c</fullName>
        <label>Home Search Grid Page Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Preserve_QB_Config__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting is used to preserve the integration configuration while resetting token for unauthorized issue</description>
        <inlineHelpText>WARNING: This setting is used to preserve the integration configuration while resetting token for unauthorized issue</inlineHelpText>
        <label>Is Preserve Integration Config</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_System_Setting_Visited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is System Setting Visited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Trial_Org__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Trial Org</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Widget_Removeable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Widget Removeable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load_Financing_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Load Financing Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load_New_Customer_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Load New Customer Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load_New_Header__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Load New Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load_New_UI__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Checked, new UI will be reflected for selected pages</inlineHelpText>
        <label>Load New UI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load_New_View_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Load New View Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Namespace__c</fullName>
        <label>Namespace</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_List_Page_Size__c</fullName>
        <defaultValue>10</defaultValue>
        <inlineHelpText>Number of records to be displayed in related list at a time</inlineHelpText>
        <label>Related List Page Size</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scheduler_Start_Day__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Defines old scheduler start day. 
Contains value from 0 to 7 in following order 
Sunday - 0 
Monday - 1 
Tuesday - 2 
Wednesday - 3 
Thursday - 4 
Friday - 5 
Saturday - 6</description>
        <inlineHelpText>Defines old scheduler start day. 
Contains value from 0 to 7 in following order 
Sunday - 0 
Monday - 1 
Tuesday - 2 
Wednesday - 3 
Thursday - 4 
Friday - 5 
Saturday - 6</inlineHelpText>
        <label>Scheduler Start Day</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technician_Scheduling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To control the availability of all functionality related to technician scheduling</description>
        <label>Technician Scheduling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_QB_accounting_tax_codes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Configuration setting to define whether to use tax codes and rates for integration
(QB: Quickbooks Configuration setting to use tax agency and tax code version of QB (NON U.S.))</description>
        <label>Use accounting tax codes</label>
        <type>Checkbox</type>
    </fields>
    <label>General Configurations</label>
</CustomObject>